--- a/deployment.yaml
+++ b/deployment.yaml
@@ -62,14 +62,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rootstock-client-gateway
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:768438872063:certificate/9fa02b26-0ee5-4301-bdd6-8474344885ff
 spec:
   selector:
     app: rootstock-client-gateway
   ports:
     - port: 443
       targetPort: 80
-  type: LoadBalancer
----
+  type: NodePort
