--- a/deployment.yaml
+++ b/deployment.yaml
@@ -27,7 +27,13 @@ spec:
           - secretRef:
               name: rootstock-client-gateway-secret
           name: web
-          resources: {}
+          resources:
+          requests:
+            memory: "384Mi"
+            cpu: "100m"
+          limits:
+            memory: "384Mi"
+            cpu: "200m"
           tty: true
           volumeMounts:
             - mountPath: /nginx
